--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@ body {
   box-sizing: border-box;
 }
 
+.title {
+  text-align: center;
+  padding: 30px 0px 15px 0px;
+  font-size: 35px;
+  font-weight: bolder;
+}
+
 .text--white {
   color: white;
 }
@@ -142,16 +149,37 @@ header {
   animation: switch-bg2 4s ease 0s infinite alternate;
 }
 
-.title {
-  text-align: center;
-  padding: 30px 0px 15px 0px;
-  font-size: 35px;
-  font-weight: bolder;
-}
-
 .footer {
   text-align: center;
   padding: 50px 0px;
   background: rgb(43, 33, 220);
   background: linear-gradient(160deg, rgb(43, 33, 220) 0%, rgb(157, 159, 255) 0%, rgb(92, 104, 254) 64%, rgb(0, 212, 255) 100%);
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media screen and (max-width: 768px) {
+  .section-first {
+    padding: 0px 50px 70px 50px;
+  }
+  .section-second {
+    padding: 20px 50px 70px 50px;
+  }
+}
+/*Small devices (landscape phones, 576px and up)*/
+@media screen and (max-width: 576px) {
+  .section-first {
+    padding: 0px 0px 70px 0px;
+  }
+  .section-second {
+    padding: 20px 0px 70px 0px;
+  }
+  .conteiner-header__left {
+    align-items: center;
+  }
+  .conteiner-header__left__h1, .conteiner-header__left__p {
+    text-align: center;
+  }
+  .logo {
+    padding-bottom: 0px;
+  }
 }/*# sourceMappingURL=style.css.map */
