--- a/scss/style.scss
+++ b/scss/style.scss
@@ -168,14 +168,38 @@ header {
 background: linear-gradient(160deg, rgba(43,33,220,1) 0%, rgba(157,159,255,1) 0%, rgba(92,104,254,1) 64%, rgba(0,212,255,1) 100%);
 }
 
-/* Medium devices (tablets, 768px and up)*/
-@media screen and (max-width: 768px) {
+/* Large devices (1300px and up)*/
+@media screen and (max-width: 1300px) {
     .section-first{
-        padding: 0px 50px 70px 50px;
+        padding: 0px 40px 70px 40px;
     }
 
     .section-second{
-        padding: 20px 50px 70px 50px;
+        padding: 20px 40px 70px 40px;
+    }
+}
+
+/* Medium devices (tablets, 830px and up)*/
+@media screen and (max-width: 830px) {
+    .section-first{
+        padding: 0px 20px 70px 20px;
+    }
+
+    .section-second{
+        padding: 20px 20px 70px 20px;
+    }
+
+    .conteiner-header{
+        &__left{
+            align-items: center;
+            &__h1, &__p{
+                text-align: center;
+            }
+        }
+    }
+
+    .logo{
+        padding-bottom: 0px;
     }
 }
 
